--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that sometimes prevented sharing a URL from another app using the iOS share sheet. We hope that your week was more exciting than ours.
+• Korjasimme virheen, joka saattoi estää URL-osoitteen jakamisen toisesta sovelluksesta iOS-jakotaulukon kautta.
