--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that sometimes prevented sharing a URL from another app using the iOS share sheet. We hope that your week was more exciting than ours.
+• Victoire ! On a mis KO un nouveau bug, qui vous empêchait parfois de partager une URL depuis une autre application via la feuille de partage iOS. Déjà prêts à remonter sur le ring pour nous attaquer au prochain bug. Quand on vous dit que nos semaines sont palpitantes…
