--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that sometimes prevented sharing a URL from another app using the iOS share sheet. We hope that your week was more exciting than ours.
+• תיקנו באג שלפעמים מנע שיתוף כתובת URL מתוך אפליקציה אחרת באמצעות גיליון השיתוף של iOS.
