--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that sometimes prevented sharing a URL from another app using the iOS share sheet. We hope that your week was more exciting than ours.
+• Ispravili smo programsku pogrešku koja je ponekad onemogućavala dijeljenje URL-a iz drugih aplikacija putem izbornika za dijeljenje sustava iOS.
