--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that sometimes prevented sharing a URL from another app using the iOS share sheet. We hope that your week was more exciting than ours.
+• Naprawiliśmy błąd, w wyniku którego czasem nie można było udostępnić adresu URL z innej aplikacji za pomocą arkusza udostępniania w systemie iOS. Mamy nadzieję, że Twój tydzień był nieco ciekawszy od naszego.
