--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that sometimes prevented sharing a URL from another app using the iOS share sheet. We hope that your week was more exciting than ours.
+• Corrigimos um erro que, às vezes, impedia o compartilhamento de um URL de outro app usando a tela de compartilhamento do iOS. Esperamos que sua semana tenha sido melhor que a nossa.
