--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• We fixed a bug that sometimes prevented sharing a URL from another app using the iOS share sheet. We hope that your week was more exciting than ours.
+• Bazen iOS paylaşım sayfasını kullanarak başka bir uygulamadan URL paylaşmayı engelleyen bir hatayı düzelttik. Gerektiğinde link paylaşamamak bazen çok can sıkıcı olabilir!
