--- a/Signal/translations/el.lproj/Localizable.strings
+++ b/Signal/translations/el.lproj/Localizable.strings
@@ -437,22 +437,22 @@
 "ATTACHMENT_PICKER_DOCUMENTS_PICKED_DIRECTORY_FAILED_ALERT_TITLE" = "Μη υποστηριζόμενο αρχείο";
 
 /* Title for an action in an action sheet that will save attachments to the device's Photos app. */
-"ATTACHMENT_SAVING_ACTION_SHEET_ACTION_SAVE" = "Save";
+"ATTACHMENT_SAVING_ACTION_SHEET_ACTION_SAVE" = "Αποθήκευση";
 
 /* Title for an action in an action sheet that will save attachments to the device's Photos app, and disable the action sheet in the future. */
-"ATTACHMENT_SAVING_ACTION_SHEET_ACTION_SAVE_AND_DONT_SHOW_AGAIN" = "Save and Don't Show Again";
+"ATTACHMENT_SAVING_ACTION_SHEET_ACTION_SAVE_AND_DONT_SHOW_AGAIN" = "Αποθήκευση και Να μην εμφανιστεί ξανά";
 
 /* Message for an action sheet asking users about saving attachments. 'Photos' is the name of the default Photos app on iOS, and should be localized as that app's name. */
-"ATTACHMENT_SAVING_ACTION_SHEET_MESSAGE" = "This media will be saved to your phone’s Photos app. Other apps may be able to access it depending on your phone's permissions.";
+"ATTACHMENT_SAVING_ACTION_SHEET_MESSAGE" = "Αυτό το πολυμέσο θα αποθηκευτεί στην εφαρμογή Φωτογραφίες του τηλεφώνου σου. Άλλες εφαρμογές μπορεί να έχουν πρόσβαση σε αυτό, ανάλογα με τις άδειες του τηλεφώνου σου.";
 
 /* Title for an action sheet asking users about saving attachments. 'Photos' is the name of the default Photos app on iOS, and should be localized as that app's name. */
-"ATTACHMENT_SAVING_ACTION_SHEET_TITLE" = "Save to Photos?";
+"ATTACHMENT_SAVING_ACTION_SHEET_TITLE" = "Αποθήκευση στις Φωτογραφίες;";
 
 /* Message shown in an action sheet after user fails to save attachments to Photos. 'Photos' is the name of the default Photos app on iOS, and should be localized as that app's name. */
-"ATTACHMENT_SAVING_FAILURE_MESSAGE" = "Failed to save to Photos";
+"ATTACHMENT_SAVING_FAILURE_MESSAGE" = "Αποτυχία αποθήκευσης στις Φωτογραφίες";
 
 /* Message shown in a toast after user successfully saves attachments to Photos. 'Photos' is the name of the default Photos app on iOS, and should be localized as that app's name. */
-"ATTACHMENT_SAVING_SUCCESS_MESSAGE" = "Saved to Photos";
+"ATTACHMENT_SAVING_SUCCESS_MESSAGE" = "Αποθηκεύτηκε στις Φωτογραφίες";
 
 /* Short text label for an animated attachment, used for thread preview and on the lock screen */
 "ATTACHMENT_TYPE_ANIMATED" = "Με γραφικά";
@@ -1484,7 +1484,7 @@
 "CONTEXT_MENU_REPLY" = "Απάντηση";
 
 /* Context menu button title */
-"CONTEXT_MENU_SAVE_MEDIA" = "Save";
+"CONTEXT_MENU_SAVE_MEDIA" = "Αποθήκευση";
 
 /* Context menu button title */
 "CONTEXT_MENU_SELECT_MESSAGE" = "Επιλογή";
@@ -2249,10 +2249,10 @@
 "DONATE_SCREEN_ERROR_MESSAGE_BANK_PAYMENT_AWAITING_AUTHORIZATION" = "Η δωρεά σου στην iDEAL βρίσκεται ακόμη υπό επεξεργασία. Έλεγξε την εφαρμογή σου στην τράπεζα για να εγκρίνεις την πληρωμή σου πριν κάνεις άλλη δωρεά.";
 
 /* Message in an alert presented when the user tries to make a donation, but already has a donation that is currently processing via bank payment. */
-"DONATE_SCREEN_ERROR_MESSAGE_BANK_PAYMENT_PLEASE_WAIT_BEFORE_MAKING_ANOTHER_DONATION" = "Οι τραπεζικές μεταφορές συνήθως χρειάζονται 1 εργάσιμη ημέρα για να διεκπεραιωθούν. Περίμενε μέχρι να ολοκληρωθεί αυτή η δωρεά προτού κάνεις νέα.";
+"DONATE_SCREEN_ERROR_MESSAGE_BANK_PAYMENT_PLEASE_WAIT_BEFORE_MAKING_ANOTHER_DONATION" = "Οι τραπεζικές μεταφορές χρειάζονται 1 με 14 εργάσιμες ημέρες για να διεκπεραιωθούν. Περίμενε μέχρι να ολοκληρωθεί αυτή η δωρεά προτού κάνεις νέα.";
 
 /* Message in an alert presented when the user tries to update their recurring donation, but already has a recurring donation that is currently processing via bank payment. */
-"DONATE_SCREEN_ERROR_MESSAGE_BANK_PAYMENT_PLEASE_WAIT_BEFORE_UPDATING_YOUR_SUBSCRIPTION" = "Οι τραπεζικές μεταφορές συνήθως χρειάζονται 1 εργάσιμη ημέρα για να διεκπεραιωθούν. Περίμενε μέχρι να ολοκληρωθεί αυτή η δωρεά προτού ενημερώσεις τη συνδρομή σου.";
+"DONATE_SCREEN_ERROR_MESSAGE_BANK_PAYMENT_PLEASE_WAIT_BEFORE_UPDATING_YOUR_SUBSCRIPTION" = "Οι τραπεζικές μεταφορές χρειάζονται 1 με 14 εργάσιμες ημέρες για να διεκπεραιωθούν. Περίμενε μέχρι να ολοκληρωθεί αυτή η δωρεά προτού ενημερώσεις τη συνδρομή σου.";
 
 /* Message for an alert shown when the user tries to donate via bank transfer, but the amount they want to donate is too large. Embeds {{ the maximum allowed donation amount }}. */
 "DONATE_SCREEN_ERROR_MESSAGE_FORMAT_BANK_TRANSFER_AMOUNT_TOO_LARGE" = "Μπορείς να στείλεις έως και %1$@ μέσω τραπεζικής μεταφοράς. Δοκίμασε διαφορετικό ποσό ή διαφορετικό τρόπο πληρωμής.";
@@ -2312,10 +2312,10 @@
 "DONATION_BADGE_ISSUE_SHEET_BANK_PAYMENT_PROCESSING_TITLE" = "Η δωρεά εκκρεμεί";
 
 /* Message for a sheet explaining that a one-time donation via bank payment is pending, and how that will affect the user's badge. Embeds {{ the name of the badge }}. Will have a 'learn more' link appended, when it is rendered. */
-"DONATION_BADGE_ISSUE_SHEET_ONE_TIME_BANK_PAYMENT_PROCESSING_MESSAGE" = "Η μεμονωμένη δωρεά σου εκκρεμεί. Θα μπορείς να εμφανίσεις το σήμα %1$@ στο προφίλ σου όταν λάβουμε τη δωρεά σου.\n\nΟι τραπεζικές μεταφορές συνήθως χρειάζονται 1 εργάσιμη ημέρα για να διεκπεραιωθούν.";
+"DONATION_BADGE_ISSUE_SHEET_ONE_TIME_BANK_PAYMENT_PROCESSING_MESSAGE" = "Η μεμονωμένη δωρεά σου εκκρεμεί. Θα μπορείς να εμφανίσεις το σήμα %1$@ στο προφίλ σου όταν λάβουμε τη δωρεά σου.\n\nΟι τραπεζικές μεταφορές χρειάζονται 1 με 14 εργάσιμες ημέρες για να διεκπεραιωθούν.";
 
 /* Message for a sheet explaining that a recurring donation via bank payment is pending, and how that will affect the user's badge. Embeds {{ the name of the badge }}. Will have a 'learn more' link appended, when it is rendered. */
-"DONATION_BADGE_ISSUE_SHEET_RECURRING_BANK_PAYMENT_PROCESSING_MESSAGE" = "Η μηνιαία δωρεά σου εκκρεμεί. Θα μπορείς να εμφανίσεις το σήμα %1$@ στο προφίλ σου όταν λάβουμε τη δωρεά σου.\n\nΟι τραπεζικές μεταφορές συνήθως χρειάζονται 1 εργάσιμη ημέρα για να διεκπεραιωθούν.";
+"DONATION_BADGE_ISSUE_SHEET_RECURRING_BANK_PAYMENT_PROCESSING_MESSAGE" = "Η μηνιαία δωρεά σου εκκρεμεί. Θα μπορείς να εμφανίσεις το σήμα %1$@ στο προφίλ σου όταν λάβουμε τη δωρεά σου.\n\nΟι τραπεζικές μεταφορές χρειάζονται 1 με 14 εργάσιμες ημέρες για να διεκπεραιωθούν.";
 
 /* Title for a button asking the user to renew their subscription, because it has expired. */
 "DONATION_BADGE_ISSUE_SHEET_RENEW_SUBSCRIPTION_BUTTON_TITLE" = "Ανανέωση συνδρομής";
@@ -2504,7 +2504,7 @@
 "DONATION_SETTINGS_MY_SUPPORT_BANK_PAYMENT_AWAITING_AUTHORIZATION_MESSAGE" = "Δεν ήταν δυνατή η επιβεβαίωση της δωρεάς σου iDEAL. Έλεγξε την εφαρμογή σου στην τράπεζα για να εγκρίνεις τη δωρεά σου ή δοκίμασε ξανά.";
 
 /* Message for an alert explaining that a one-time payment made via bank transfer is being processed. */
-"DONATION_SETTINGS_MY_SUPPORT_BANK_PAYMENT_PROCESSING_MESSAGE" = "Η τραπεζική μεταφορά σου είναι σε εκκρεμότητα. Οι τραπεζικές μεταφορές συνήθως χρειάζονται 1 εργάσιμη ημέρα για να διεκπεραιωθούν.";
+"DONATION_SETTINGS_MY_SUPPORT_BANK_PAYMENT_PROCESSING_MESSAGE" = "Η τραπεζική μεταφορά σου είναι σε εκκρεμότητα. Οι τραπεζικές μεταφορές χρειάζονται 1 με 14 εργάσιμες ημέρες για να διεκπεραιωθούν.";
 
 /* Title for an alert explaining that a one-time payment made via bank transfer is being processed. */
 "DONATION_SETTINGS_MY_SUPPORT_BANK_PAYMENT_PROCESSING_TITLE" = "Η δωρεά εκκρεμεί";
@@ -4346,7 +4346,7 @@
 "MEDIA_VIEWER_DELETE_MEDIA_ACTION" = "Διαγραφή";
 
 /* Context menu item in media viewer. Refers to saving currently displayed photo/video to the Photos app. */
-"MEDIA_VIEWER_SAVE_MEDIA_ACTION" = "Save";
+"MEDIA_VIEWER_SAVE_MEDIA_ACTION" = "Αποθήκευση";
 
 /* button title to snooze a megaphone */
 "MEGAPHONE_REMIND_LATER" = "Υπενθύμιση αργότερα";
@@ -4430,7 +4430,7 @@
 "MESSAGE_ACTION_REPLY" = "Απάντηση σε αυτό το μήνυμα";
 
 /* Action sheet button title */
-"MESSAGE_ACTION_SAVE_MEDIA" = "Save";
+"MESSAGE_ACTION_SAVE_MEDIA" = "Αποθήκευση";
 
 /* Action sheet accessibility label */
 "MESSAGE_ACTION_SELECT_MESSAGE" = "Επιλογή πολλών";
